# agent-hs

./: .gitignore  README.md  build.sh  newsagent.cabal  stack.yaml
src/: Analysis.hs  Config.hs  Main.hs
src/Views/: Console.hs
