Name:                newsagent
Version:             0.1.0.0
Synopsis:            A multi-agent rss newsagent with keyword filtering
Description:         Please see README.md
Homepage:            http://me.org
License:             BSD3
License-file:        LICENSE
Author:              Alia Khouri
Maintainer:          alia_khouri@yahoo.org
Copyright:           Copyright (c) 2012 alia_khouri@yahoo.org
Category:            Web
Build-type:          Simple
Extra-source-files:  README
Cabal-version:       >= 1.10
Executable newsagent
  hs-source-dirs:    src
  Main-is:           Main.hs
  default-language:  Haskell2010
  Build-depends:     base >= 4 && < 5,
                     network >= 2.2.1.7,
                     HTTP >= 4000.0.9,
--                     old-locale >= 1.0.0.2,
                     time >= 1.1.4,
                     regex-compat >= 0.92,
                     feed >= 0.3.8,
                     tagsoup >= 0.12.3,
                     blaze-html >= 0.4.2.0,
                     blaze-markup >= 0.5.1.0,
                     parallel-io >= 0.3.2,
                     postgresql-orm >= 0.4.0

  -- Modules not exported by this package.
  Other-modules:
                     Analysis
                     Config
                     Model
                     Stemming
                     Text
                     Utils
                     Views.Console
                     Views.Html
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:

